--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -36,6 +36,24 @@ Copyright (c) 2016, Oracle and/or its affiliates. All rights reserved.
         <version>1.1-SNAPSHOT</version>
     </parent>
 
+    <build>
+        <sourceDirectory>.</sourceDirectory>
+
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>2.0.2</version>
+            <configuration>
+              <includes>
+                <include>**/LdapPlugin/src/**</include>
+                <include>**/UserPlugin/src/**</include>
+                <include>*Plugin.java</include>
+              </includes>
+            </configuration>
+          </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
