actually compile plugins with Maven

--- a/opengrok-indexer/build.xml
+++ b/opengrok-indexer/build.xml
@@ -41,7 +41,7 @@ Copyright (c) 2007, 2017, Oracle and/or its affiliates. All rights reserved.
     <property name="test.svn" value="${test.repositories}/svn"/>
     <property name="test.razor" value="${test.repositories}/razor"/>
     <property name="test.razor.repo" value="../ext/SampleRazorRepository/"/>
-    <property name="test.plugins_jar" value="${test.plugins}/plugins.jar"/>
+    <property name="test.plugins_jar" value="${test.plugins}/testplugins.jar"/>
     <property name="build.test.reposroots" value="target/reposroot"/>
     <property name="build.test.classes.dir" value="target/test-classes"/>
 
@@ -152,8 +152,8 @@ Copyright (c) 2007, 2017, Oracle and/or its affiliates. All rights reserved.
                 defaultexcludes="no"/>
 
         <copy
-            file="${test.plugins_jar}"
-            tofile="${build.test.classes.dir}/org/opensolaris/opengrok/authorization/plugins.jar" />
+             file="${test.plugins_jar}"
+             tofile="${build.test.classes.dir}/org/opensolaris/opengrok/authorization/testplugins.jar" />
 
         <antcall target="-delete-generated-repository-files"/>
     </target>
