--- a/build.xml
+++ b/build.xml
@@ -671,6 +671,9 @@ Portions Copyright (c) 2017, Chris Fraire <cfraire@me.com>.
             <tarfileset dir="${dist.dir}" prefix="${distname}-${version}/man/man1">
                 <include name="opengrok.1"/>
             </tarfileset>
+            <tarfileset dir="${dist.dir}" prefix="${distname}-${version}/share/plugins">
+                <include name="plugins.jar"/>
+            </tarfileset>
         </tar>
     </target>
 
