--- a/opengrok-indexer/pom.xml
+++ b/opengrok-indexer/pom.xml
@@ -162,7 +162,7 @@ Portions Copyright (c) 2017, Chris Fraire <cfraire@me.com>.
                         </goals>
                         <configuration>
                             <lexDefinitions>
-                                <lexDefinition>../src</lexDefinition>
+                                <lexDefinition>${basedir}/target/jflex-sources</lexDefinition>
                             </lexDefinitions>
                             <inputStreamCtor>false</inputStreamCtor>
                         </configuration>
@@ -232,6 +232,21 @@ Portions Copyright (c) 2017, Chris Fraire <cfraire@me.com>.
                 <version>1.8</version>
                 <executions>
                     <execution>
+                        <id>collect-lex-lexh</id>
+                        <phase>initialize</phase>
+                        <configuration>
+                            <target>
+                                <property name="src.dir" value="../src"/>
+                                <property name="tgt.dir" value="${basedir}/target/jflex-sources"/>
+                                <ant target="-collect-lex-lexh"/>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>update-build-info</id>
                         <phase>generate-resources</phase>
                         <configuration>
                             <target>
