fix paths and perform cleanup

--- a/plugins/UserPlugin/nbproject/project.properties
+++ b/plugins/UserPlugin/nbproject/project.properties
@@ -29,8 +29,8 @@ dist.jar=${dist.dir}/UserPlugin.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.opengrok.jar=../../workspace/OpenGrok/dist/opengrok.jar
-file.reference.servlet-api-2.5.jar=../../workspace/OpenGrok/lib/servlet-api-2.5.jar
+file.reference.opengrok.jar=../../dist/opengrok.jar
+file.reference.servlet-api-2.5.jar=../../lib/servlet-api-2.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
