--- a/plugins/LdapPlugin/nbproject/project.properties
+++ b/plugins/LdapPlugin/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=OraclePlugin
+application.title=LdapPlugin
 application.vendor=ktulinge
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
@@ -30,17 +30,8 @@ dist.jar=${dist.dir}/LdapPlugin.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.lucene-analyzers-common-6.5.0.jar=../../workspace/OpenGrok/lib/lucene-analyzers-common-6.5.0.jar
-file.reference.lucene-analyzers-common-6.5.1.jar=/home/ktulinge/workspace/OpenGrok/lib/lucene-analyzers-common-6.5.1.jar
-file.reference.lucene-core-6.5.0.jar=../../workspace/OpenGrok/lib/lucene-core-6.5.0.jar
-file.reference.lucene-core-6.5.1.jar=/home/ktulinge/workspace/OpenGrok/lib/lucene-core-6.5.1.jar
-file.reference.lucene-queryparser-6.5.0.jar=../../workspace/OpenGrok/lib/lucene-queryparser-6.5.0.jar
-file.reference.lucene-queryparser-6.5.1.jar=/home/ktulinge/workspace/OpenGrok/lib/lucene-queryparser-6.5.1.jar
-file.reference.lucene-suggest-6.5.0.jar=../../workspace/OpenGrok/lib/lucene-suggest-6.5.0.jar
-file.reference.lucene-suggest-6.5.1.jar=/home/ktulinge/workspace/OpenGrok/lib/lucene-suggest-6.5.1.jar
-file.reference.opengrok.jar=/home/ktulinge/workspace/OpenGrok/dist/opengrok.jar
-file.reference.servlet-api-2.5.jar=../../workspace/OpenGrok/dist/lib/servlet-api-2.5.jar
-file.reference.servlet-api-2.5.jar-1=../../workspace/OpenGrok/lib/servlet-api-2.5.jar
+file.reference.opengrok.jar=../../dist/opengrok.jar
+file.reference.servlet-api-2.5.jar=../../lib/servlet-api-2.5.jar
 file.reference.UserPlugin.jar=../UserPlugin/dist/UserPlugin.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -48,17 +39,8 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.opengrok.jar}:\
-    ${file.reference.servlet-api-2.5.jar}:\
     ${file.reference.UserPlugin.jar}:\
-    ${file.reference.lucene-analyzers-common-6.5.0.jar}:\
-    ${file.reference.lucene-core-6.5.0.jar}:\
-    ${file.reference.lucene-queryparser-6.5.0.jar}:\
-    ${file.reference.lucene-suggest-6.5.0.jar}:\
-    ${file.reference.servlet-api-2.5.jar-1}:\
-    ${file.reference.lucene-analyzers-common-6.5.1.jar}:\
-    ${file.reference.lucene-core-6.5.1.jar}:\
-    ${file.reference.lucene-queryparser-6.5.1.jar}:\
-    ${file.reference.lucene-suggest-6.5.1.jar}
+    ${file.reference.servlet-api-2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked -Xlint:deprecation
 javac.deprecation=false
@@ -72,10 +54,6 @@ javac.test.classpath=\
     ${build.classes.dir}:\
     ${libs.junit_4.classpath}:\
     ${libs.hamcrest.classpath}:\
-    ${file.reference.lucene-analyzers-common-6.5.1.jar}:\
-    ${file.reference.lucene-core-6.5.1.jar}:\
-    ${file.reference.lucene-queryparser-6.5.1.jar}:\
-    ${file.reference.lucene-suggest-6.5.1.jar}:\
     ${file.reference.opengrok.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
@@ -122,11 +100,7 @@ run.classpath=\
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}:\
-    ${file.reference.lucene-analyzers-common-6.5.0.jar}:\
-    ${file.reference.lucene-core-6.5.0.jar}:\
-    ${file.reference.lucene-queryparser-6.5.0.jar}:\
-    ${file.reference.lucene-suggest-6.5.0.jar}
+    ${build.test.classes.dir}:
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
