--- a/build.xml
+++ b/build.xml
@@ -575,7 +575,7 @@ Portions Copyright (c) 2017, Chris Fraire <cfraire@me.com>.
              dest="lib/${junit.jar}" verbose="true" usetimestamp="true"/>
     </target>
 
-    <target name="-post-jar" depends="-copy-lib-without-netbeans, plugins">
+    <target name="-post-jar" depends="-copy-lib-without-netbeans">
         <war destfile="${dist.war}" webxml="web/WEB-INF/web.xml">
             <fileset dir="web" excludes="META-INF/context.xml"/>
             <lib dir="${dist.dir}" includes="opengrok.jar"/>
@@ -1101,7 +1101,7 @@ Portions Copyright (c) 2017, Chris Fraire <cfraire@me.com>.
     </target>
 
     <!-- Build the plugins. -->
-    <target name="plugins" depends="-pre-pre-compile">
+    <target name="plugins" depends="jar">
         <mkdir dir="${build.dir}/plugins"/>
         <javac srcdir="plugins/"
                destdir="${build.dir}/plugins"
@@ -1252,5 +1252,5 @@ Portions Copyright (c) 2017, Chris Fraire <cfraire@me.com>.
         </exec>
     </target>
 
-    <target name="all" depends="clean,jar,compile.jsp,test,javadoc,pmd,findbugs-xml,checkstyle" />
+    <target name="all" depends="clean,plugins,jar,compile.jsp,test,javadoc,pmd,findbugs-xml,checkstyle" />
 </project>
