--- a/build.xml
+++ b/build.xml
@@ -1105,6 +1105,7 @@ Portions Copyright (c) 2017, Chris Fraire <cfraire@me.com>.
         <mkdir dir="${build.dir}/plugins"/>
         <javac srcdir="plugins/"
                destdir="${build.dir}/plugins"
+               debug="true"
                includes="**/*.java"
 	       excludes="**/test/**"
                classpath="${javac.classpath}:${dist.jar}"
