--- a/opengrok-indexer/pom.xml
+++ b/opengrok-indexer/pom.xml
@@ -96,6 +96,13 @@ Portions Copyright (c) 2017, Chris Fraire <cfraire@me.com>.
                 </excludes>
             </testResource>
             <testResource>
+                <targetPath>org/opensolaris/opengrok/analysis/clojure/</targetPath>
+                <directory>../test/org/opensolaris/opengrok/analysis/clojure/</directory>
+                <excludes>
+                    <exclude>*.java</exclude>
+                </excludes>
+            </testResource>
+            <testResource>
                 <targetPath>org/opensolaris/opengrok/analysis/document/</targetPath>
                 <directory>../test/org/opensolaris/opengrok/analysis/document/</directory>
                 <excludes>
