--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ lib/jrcs.jar
 lib/lucene-*
 lib/servlet-api-*
 lib/junit-*
+lib/hamcrest-core-*
 derby.log
 opengrok*.log
 nbproject/genfiles.properties
