--- a/build.xml
+++ b/build.xml
@@ -119,6 +119,8 @@ Portions Copyright (c) 2017, Chris Fraire <cfraire@me.com>.
 
     <property name="junit.version" value="4.12"/>
     <property name="junit.jar" value="junit-${junit.version}.jar"/>
+    <property name="hamcrest.version" value="1.3"/>
+    <property name="hamcrest.jar" value="hamcrest-core-${hamcrest.version}.jar"/>
 
     <property name="mvn.repository" value="http://repo1.maven.org/maven2"/>
 
@@ -565,7 +567,7 @@ Portions Copyright (c) 2017, Chris Fraire <cfraire@me.com>.
         </condition>
     </target>
 
-    <target name="download-junit" depends="-check-junit" if="junit_not_downloaded">
+    <target name="download-junit" depends="-check-junit,download-hamcrest" if="junit_not_downloaded">
         <delete>
             <fileset dir="lib">
                 <include name="junit-*.jar"/>
@@ -573,6 +575,27 @@ Portions Copyright (c) 2017, Chris Fraire <cfraire@me.com>.
         </delete>
         <get src="${mvn.repository}/junit/junit/${junit.version}/${junit.jar}"
              dest="lib/${junit.jar}" verbose="true" usetimestamp="true"/>
+    </target>
+
+    <target name="-check-hamcrest" description="Check that hamcrest jar file is present">
+        <available file="${hamcrest.jar}" type="file" property="hamcrest.jar.present">
+            <filepath refid="plainlib.search.path"/>
+        </available>
+        <condition property="hamcrest_not_downloaded">
+            <not>
+                <isset property="hamcrest.jar.present"/>
+            </not>
+        </condition>
+    </target>
+
+    <target name="download-hamcrest" depends="-check-hamcrest" if="hamcrest_not_downloaded">
+        <delete>
+            <fileset dir="lib">
+                <include name="hamcrest-*.jar"/>
+            </fileset>
+        </delete>
+        <get src="${mvn.repository}/org/hamcrest/hamcrest-core/${hamcrest.version}/${hamcrest.jar}"
+             dest="lib/${hamcrest.jar}" verbose="true" usetimestamp="true"/>
     </target>
 
     <target name="-post-jar" depends="-copy-lib-without-netbeans">
@@ -863,7 +886,7 @@ Portions Copyright (c) 2017, Chris Fraire <cfraire@me.com>.
         </jacoco:report>
     </target>
 
-    <target name="-pre-compile-test" depends="-check-junit"><!-- depends="-set-jacocoagent"> -->
+    <target name="-pre-compile-test" depends="download-junit"><!-- depends="-set-jacocoagent"> -->
     </target>
 
     <!-- <target name="-pre-compile-test-single" depends="-set-jacocoagent"/> -->
