--- a/opengrok-indexer/pom.xml
+++ b/opengrok-indexer/pom.xml
@@ -201,6 +201,13 @@ Portions Copyright (c) 2017, Chris Fraire <cfraire@me.com>.
                 </excludes>
             </testResource>
             <testResource>
+                <targetPath>org/opensolaris/opengrok/analysis/sql/</targetPath>
+                <directory>../test/org/opensolaris/opengrok/analysis/sql/</directory>
+                <excludes>
+                    <exclude>*.java</exclude>
+                </excludes>
+            </testResource>
+            <testResource>
                 <targetPath>org/opensolaris/opengrok/analysis/tcl/</targetPath>
                 <directory>../test/org/opensolaris/opengrok/analysis/tcl/</directory>
                 <excludes>
