--- a/opengrok-indexer/pom.xml
+++ b/opengrok-indexer/pom.xml
@@ -180,6 +180,13 @@ Portions Copyright (c) 2017, Chris Fraire <cfraire@me.com>.
                 </excludes>
             </testResource>
             <testResource>
+                <targetPath>org/opensolaris/opengrok/analysis/powershell/</targetPath>
+                <directory>../test/org/opensolaris/opengrok/analysis/powershell/</directory>
+                <excludes>
+                    <exclude>*.java</exclude>
+                </excludes>
+            </testResource>
+            <testResource>
                 <targetPath>org/opensolaris/opengrok/analysis/python/</targetPath>
                 <directory>../test/org/opensolaris/opengrok/analysis/python/</directory>
                 <excludes>
