--- a/opengrok-indexer/pom.xml
+++ b/opengrok-indexer/pom.xml
@@ -117,6 +117,13 @@ Portions Copyright (c) 2017, Chris Fraire <cfraire@me.com>.
                 </excludes>
             </testResource>
             <testResource>
+                <targetPath>org/opensolaris/opengrok/analysis/eiffel/</targetPath>
+                <directory>../test/org/opensolaris/opengrok/analysis/eiffel/</directory>
+                <excludes>
+                    <exclude>*.java</exclude>
+                </excludes>
+            </testResource>
+            <testResource>
                 <targetPath>org/opensolaris/opengrok/analysis/erlang/</targetPath>
                 <directory>../test/org/opensolaris/opengrok/analysis/erlang/</directory>
                 <excludes>
