--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,11 +1,7 @@
-file.reference.bcel-6.0.jar=lib/bcel-6.0.jar
 javac.external.vm=false
-javadoc.reference.lucene-queryparser.jar=C:\\Programming\\lucene-6.5.0\\docs\\queryparser
-#Fri Nov 06 11:03:18 CET 2015
 jnlp.offline-allowed=false
 javadoc.splitindex=true
 build.classes.excludes=**/*.lex,**/*.html,**/*.java,**/*.form
-jnlp.codebase.url=file\:/home/trond/projects/OpenGrok/trunk/dist/
 javadoc.author=false
 build.sysclasspath=ignore
 # Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
@@ -79,7 +75,7 @@ javac.classpath=\
     ${file.reference.ant.jar}:\
     ${file.reference.jrcs.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
-    ${file.reference.bcel-6.0.jar}:\
+    ${file.reference.bcel.jar}:\
     ${file.reference.lucene-analyzers-common.jar}:\
     ${file.reference.lucene-core.jar}:\
     ${file.reference.lucene-queryparser.jar}:\
@@ -103,6 +99,9 @@ excludes=
 application.title=OpenGrok
 jnlp.codebase.type=local
 servlet-api.version=2.5
+bcel.version=6.2
+bcel.jar=bcel-${bcel.version}.jar
+file.reference.bcel.jar=lib/${bcel.jar}
 javac.processorpath=\
     ${javac.classpath}
 build.test.results.dir=${build.dir}/test/results
