add the rest of bcel missing files, clean

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -80,8 +80,7 @@ javac.classpath=\
     ${file.reference.lucene-core.jar}:\
     ${file.reference.lucene-queryparser.jar}:\
     ${file.reference.lucene-suggest.jar}:\
-    ${file.reference.servlet-api.jar}:\
-    ${file.reference.swing-layout-0.9.jar}
+    ${file.reference.servlet-api.jar}
 javadoc.noindex=false
 manifest.custom.codebase=
 annotation.processing.enabled.in.editor=false
@@ -105,7 +104,6 @@ file.reference.bcel.jar=lib/${bcel.jar}
 javac.processorpath=\
     ${javac.classpath}
 build.test.results.dir=${build.dir}/test/results
-file.reference.swing-layout-0.9.jar=lib/swing-layout-0.9.jar
 file.reference.lucene-queryparser.jar=lib/${lucene-queryparser.jar}
 endorsed.classpath=
 javadoc.use=true
