--- a/opengrok-web-nbproject/nbproject/project.properties
+++ b/opengrok-web-nbproject/nbproject/project.properties
@@ -32,7 +32,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.bcel-6.0.jar=../lib/bcel-6.0.jar
+bcel.version=6.2
+bcel.jar=bcel-${bcel.version}.jar
+file.reference.bcel.jar=../lib/${bcel.jar}
 file.reference.json-simple-1.1.1.jar=../lib/json-simple-1.1.1.jar
 j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.6.3.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 lucene.version=7.2.0
@@ -50,7 +52,6 @@ file.reference.opengrok-generatedsrc=../generatedsrc
 file.reference.opengrok-src=../src
 file.reference.opengrok-test=../test
 file.reference.Projects-opengrok=..
-file.reference.swing-layout-0.9.jar=../lib/swing-layout-0.9.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -61,10 +62,9 @@ jar.compress=false
 java.source.based=true
 javac.classpath=\
     ${file.reference.ant.jar}:\
-    ${file.reference.swing-layout-0.9.jar}:\
     ${file.reference.jrcs.jar}:\
     ${reference.opengrok.jar}:\
-    ${file.reference.bcel-6.0.jar}:\
+    ${file.reference.bcel.jar}:\
     ${file.reference.lucene-core.jar}:\
     ${file.reference.lucene-analyzers-common.jar}:\
     ${file.reference.lucene-queryparser.jar}:\
