--- a/debian/ant.properties
+++ b/debian/ant.properties
@@ -1,5 +1,5 @@
-DEB_JARS=JFlex.jar:ant-junit.jar:ant-nodeps.jar:junit4.jar:bcel.jar:swing-layout.jar:lucene-core.jar:lucene-spellchecker.jar:servlet-api.jar
-WAR_JARS=bcel.jar:swing-layout.jar:lucene-core.jar:lucene-spellchecker.jar
+DEB_JARS=JFlex.jar:ant-junit.jar:ant-nodeps.jar:junit4.jar:bcel.jar:swing-layout.jar:lucene-core.jar:lucene-highlighter.jar:lucene-join.jar:lucene-memory.jar:lucene-queries.jar:lucene-spellchecker.jar:servlet-api.jar
+WAR_JARS=bcel.jar:swing-layout.jar:lucene-core.jar:lucene-highlighter.jar:lucene-join.jar:lucene-memory.jar:lucene-queries.jar:lucene-spellchecker.jar
 
 file.reference.jrcs.jar=lib/jrcs.jar
 
