--- a/opengrok-web-nbproject/nbproject/project.properties
+++ b/opengrok-web-nbproject/nbproject/project.properties
@@ -40,10 +40,18 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 lucene.version=7.2.1
 lucene-core.jar=lucene-core-${lucene.version}.jar
 lucene-analyzers-common.jar=lucene-analyzers-common-${lucene.version}.jar
+lucene-highlighter.jar=lucene-highlighter-${lucene.version}.jar
+lucene-join.jar=lucene-join-${lucene.version}.jar
+lucene-memory.jar=lucene-memory-${lucene.version}.jar
+lucene-queries.jar=lucene-queries-${lucene.version}.jar
 lucene-queryparser.jar=lucene-queryparser-${lucene.version}.jar
 lucene-suggest.jar=lucene-suggest-${lucene.version}.jar
 file.reference.lucene-core.jar=../lib/${lucene-core.jar}
 file.reference.lucene-analyzers-common.jar=../lib/${lucene-analyzers-common.jar}
+file.reference.lucene-highlighter.jar=../lib/${lucene-highlighter.jar}
+file.reference.lucene-join.jar=../lib/${lucene-join.jar}
+file.reference.lucene-memory.jar=../lib/${lucene-memory.jar}
+file.reference.lucene-queries.jar=../lib/${lucene-queries.jar}
 file.reference.lucene-queryparser.jar=../lib/${lucene-queryparser.jar}
 file.reference.lucene-suggest.jar=../lib/${lucene-suggest.jar}
 file.reference.ant.jar=${ant.library.dir}/ant.jar
@@ -67,6 +75,10 @@ javac.classpath=\
     ${file.reference.bcel.jar}:\
     ${file.reference.lucene-core.jar}:\
     ${file.reference.lucene-analyzers-common.jar}:\
+    ${file.reference.lucene-highlighter.jar}:\
+    ${file.reference.lucene-join.jar}:\
+    ${file.reference.lucene-memory.jar}:\
+    ${file.reference.lucene-queries.jar}:\
     ${file.reference.lucene-queryparser.jar}:\
     ${file.reference.lucene-suggest.jar}:\
     ${file.reference.json-simple-1.1.1.jar}
