--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -11,6 +11,10 @@ manifest.custom.caller.allowable.codebase=
 project.licensePath=./nbproject/licenseheader.txt
 src.generatedsrc.dir=generatedsrc
 file.reference.lucene-core.jar=lib/${lucene-core.jar}
+file.reference.lucene-highlighter.jar=lib/${lucene-highlighter.jar}
+file.reference.lucene-join.jar=lib/${lucene-join.jar}
+file.reference.lucene-memory.jar=lib/${lucene-memory.jar}
+file.reference.lucene-queries.jar=lib/${lucene-queries.jar}
 dist.war=${dist.dir}/source.war
 javac.target=1.8
 build.generated.dir=${build.dir}/generated
@@ -19,6 +23,10 @@ run.classpath=\
     ${build.classes.dir}
 lucene.version=7.2.1
 lucene-core.jar=lucene-core-${lucene.version}.jar
+lucene-highlighter.jar=lucene-highlighter-${lucene.version}.jar
+lucene-join.jar=lucene-join-${lucene.version}.jar
+lucene-memory.jar=lucene-memory-${lucene.version}.jar
+lucene-queries.jar=lucene-queries-${lucene.version}.jar
 file.reference.opengrok-dev-test=test
 debug.test.classpath=${run.test.classpath}
 jnlp.descriptor=application
@@ -78,6 +86,10 @@ javac.classpath=\
     ${file.reference.bcel.jar}:\
     ${file.reference.lucene-analyzers-common.jar}:\
     ${file.reference.lucene-core.jar}:\
+    ${file.reference.lucene-highlighter.jar}:\
+    ${file.reference.lucene-join.jar}:\
+    ${file.reference.lucene-memory.jar}:\
+    ${file.reference.lucene-queries.jar}:\
     ${file.reference.lucene-queryparser.jar}:\
     ${file.reference.lucene-suggest.jar}:\
     ${file.reference.servlet-api.jar}
