--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,9 @@ cache:
   - $HOME/.m2
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq exuberant-ctags cvs git mercurial cssc bzr subversion monotone rcs
+ - sudo apt-get install -qq exuberant-ctags cvs git mercurial cssc bzr subversion monotone rcs pep8
  - sudo ./scripts/install-bitkeeper.sh
+install: true
 
 before_script:
  - bk --version
@@ -26,7 +27,7 @@ env:
    #   via the "travis encrypt" command using the project repo's public key
    - secure: "O_cda5pWDBAP-O3_0nG5RQ"
 
-script:     "mvn -DskipTests=true -Dmaven.javadoc.skip=false -B -V compile && cd opengrok-indexer && mvn javadoc:javadoc && cd ../opengrok-web && mvn javadoc:javadoc && cd .. && mvn test -B"
+script:     "mvn -DskipTests=true -Dmaven.javadoc.skip=false -B -V compile && cd opengrok-indexer && mvn javadoc:javadoc && cd ../opengrok-web && mvn javadoc:javadoc && cd .. && mvn verify -B"
 
 addons:
   coverity_scan:
