--- a/build.xml
+++ b/build.xml
@@ -19,7 +19,7 @@ information: Portions Copyright [yyyy] [name of copyright owner]
 CDDL HEADER END
 
 Copyright (c) 2005, 2017, Oracle and/or its affiliates. All rights reserved.
-Portions Copyright (c) 2017, Chris Fraire <cfraire@me.com>.
+Portions Copyright (c) 2017-2018, Chris Fraire <cfraire@me.com>.
 
 -->
 <project name="OpenGrok" default="jar" basedir="." xmlns:jacoco="antlib:org.jacoco.ant"
@@ -371,6 +371,9 @@ Portions Copyright (c) 2017, Chris Fraire <cfraire@me.com>.
         <property name="gen.context.dir" value="/org/opensolaris/opengrok/search/context"/>
         <run-jflex dir="${gen.context.dir}" name="HistoryLineTokenizer"/>
         <run-jflex dir="${gen.context.dir}" name="PlainLineTokenizer"/>
+
+        <property name="gen.web.dir" value="/org/opensolaris/opengrok/web"/>
+        <run-jflex dir="${gen.web.dir}" name="XrefSourceTransformer"/>
     </target>
 
     <property name="git" value="git"/>
